Add SSL Verify option to HTML + python code

--- a/default/data/ui/alerts/httpalert.html
+++ b/default/data/ui/alerts/httpalert.html
@@ -35,5 +35,14 @@
 </select>
     </div>
 </div>
+<div class="control-group">
+	<label class="control-label" for="httpalert_verify_ssl_certificate">Verify SSL Certificate <span class="required">*</span> </label>
+    <div class="controls">
+<select name="action.httpalert.param.verify_ssl_certificate" id="httpalert_verify_ssl_certificate">
+        <option value=1>True</option>
+        <option value=0>False</option>
+</select>
+    </div>
+</div>
     
 </form>
